<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name"/>
            <item
                android:id="@+id/sort_by_difficulty"
                android:title="@string/sort_by_difficulty"/>
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/sort_by_date"/>
        </menu>
    </item>

</menu>